force-app/main/default/objects/Project__c/fields/Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Stage_Formula__c</fullName>
    <formula>CASE(
    Stage__c,
    &apos;Initialization&apos;, &apos;🔍 Initialization&apos;,
    &apos;Preparation&apos;, &apos;🛠 Preparation&apos;,
    &apos;In Progress&apos;, &apos;📄 In Progress&apos;,
    &apos;On Hold&apos;, &apos;🎉 On Hold&apos;,
    &apos;⚙️ Completed&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>