force-app/main/default/objects/Project__c/recordTypes/Client_Project.recordType-meta.xml
<RecordType>
    <fullName>Client_Project</fullName>
    <active>true</active>
    <description>For client use.</description>
    <label>Client Project</label>
</RecordType>