force-app/main/default/objects/Project__c/validationRules/ClientProjectMustHaveClientAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>ClientProjectMustHaveClientAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Client_Project&apos;,  
    NOT(ISBLANK(Client__c)),                    
    NOT(ISPICKVAL(Client__r.Type, &apos;Client&apos;))    
)</errorConditionFormula>
    <errorDisplayField>Client__c</errorDisplayField>
    <errorMessage>A Client Project must be linked to an Account with the type &apos;Client&apos;</errorMessage>
</ValidationRule>