force-app/main/default/objects/Project__c/validationRules/InternalProjectMustHaveInternalDepartAcc.validationRule-meta.xml
<ValidationRule>
    <fullName>InternalProjectMustHaveInternalDepartAcc</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Internal_Project&apos;,                         
    NOT(ISPICKVAL(Client__r.Type, &apos;Internal Department&apos;)) 
)</errorConditionFormula>
    <errorDisplayField>Client__c</errorDisplayField>
    <errorMessage>An Internal Project must be linked to an Account with the type &apos;Internal Department.</errorMessage>
</ValidationRule>