force-app/main/default/objects/Project__c/listViews/Client_queue_Project.listView-meta.xml
<ListView>
    <fullName>Client_queue_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Q</label>
    <queue>Client_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>