force-app/main/default/objects/Project__c/listViews/Internal_queue_Project.listView-meta.xml
<ListView>
    <fullName>Internal_queue_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Internal queue</label>
    <queue>Internal_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>